dirty but it works with docker and swagger
